# file_open

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: empty_state.dart  file_info_header.dart  file_list.dart  file_list_dialog.dart  file_list_item.dart  main.dart  snackbar_helper.dart  utils.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt  README.md
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: file_open.dart
lib/src/: messages.g.dart
macos/: file_open.podspec
macos/Classes/: ApplicationSwizzler.swift  FileOpen.swift  FileOpenPlugin.swift  Messages.g.cpp  Messages.g.m  Messages.g.swift
pigeons/: messages.dart
windows/: CMakeLists.txt  file_open_plugin.cpp  file_open_plugin.h  file_open_plugin_c_api.cpp
windows/file_open/: FileOpenPlugin.cpp  FileOpenPluginCApi.cpp  file_open_plugin.h  file_open_plugin_c_api.h  messages.g.cpp
windows/include/file_open/: file_open_plugin.h
windows/runner/: messages.g.cpp  messages.g.h
